tests/purs/passing/InstanceUnnamedSimilarClassName/ImportedClassName.purs
module ImportedClassName where

class ClassName a where
  foo :: a -> Int
