tests/purs/failing/1733/Thingy.purs
module Thingy where

foo :: Int
foo = 1
